--- a/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
+++ b/HoPe/Foerder/templates/Foerder/donate_fv_ghana.html
@@ -52,7 +52,7 @@
   <div class="content">
     <h2> {% trans "donate_fv_ghana_headline_01" %} </h2>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-01 hope-float-left hope-margin-10" src="{% static 'Hope_trans.jpeg' %}">
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_01_01" %} </div>
     </div>
     <div class="hope-margin-10 hope-bold"> {% trans "donate_fv_ghana_content_01_02" %} </div>
@@ -61,11 +61,11 @@
   <div class="content">
     <h2> {% trans "donate_fv_ghana_headline_02" %} </h2>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-02-01 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-02-01 hope-float-right hope-margin-10" src="{% static 'Hope_JR2020_03.jpg' %}">
       <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_02_01" %} </div>
     </div>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-02-02 hope-float-right hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-02-02 hope-float-right hope-margin-10" src="{% static 'Hope_JR2020_04.jpeg' %}">
       <div class=" hope-margin-10"> {% trans "donate_fv_ghana_content_02_02" %} </div>
     </div>
     <div>
@@ -75,16 +75,16 @@
             <img class="donate-fv-ghana-pic-02-03" src="{% static 'WorkInProgress.png' %}">
           </div>
           <div class="hope-slideshow-slide hope-slideshow-fade">
-            <img class="donate-fv-ghana-pic-02-04" src="{% static 'WorkInProgress.png' %}">
+            <img class="donate-fv-ghana-pic-02-04" src="{% static 'Hope_JR2020_05.JPG' %}">
           </div>
           <div class="hope-slideshow-slide hope-slideshow-fade">
-            <img class="donate-fv-ghana-pic-02-05" src="{% static 'WorkInProgress.png' %}">
+            <img class="donate-fv-ghana-pic-02-05" src="{% static 'Hope_JR2020_02.JPG' %}">
           </div>
         </div>
         <div class=" hope-margin-10"> {% trans "donate_fv_ghana_content_02_03" %} </div>
       </div>
       <div class="hope-width-100 hope-text-align-center">
-        <img class="donate-fv-ghana-pic-02-06 hope-display-inline-block hope-width-33" src="{% static 'WorkInProgress.png' %}">
+        <img class="donate-fv-ghana-pic-02-06 hope-display-inline-block hope-width-33" src="{% static 'Hope_JR2020_01.jpg' %}">
         <img class="donate-fv-ghana-pic-02-07 hope-display-inline-block hope-width-33" src="{% static 'Hope_01.jpeg' %}">
         <img class="donate-fv-ghana-pic-02-08 hope-display-inline-block hope-width-33" src="{% static 'WorkInProgress.png' %}">
       </div>
@@ -102,7 +102,7 @@
   <div class="content">
     <h2> {% trans "donate_fv_ghana_headline_04" %} </h2>
     <div class="hope-display-inline-block">
-      <img class="donate-fv-ghana-pic-04-01 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-04-01 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_06.jpeg' %}">
       <div class="hope-display-block hope-float-right hope-margin-10">
         <div>
           <img class="donate-fv-ghana-pic-04-02" src="{% static 'WorkInProgress.png' %}">
@@ -127,7 +127,7 @@
 
   <div class="content">
     <h2> {% trans "donate_fv_ghana_headline_06" %} </h2>
-    <img class="donate-fv-ghana-pic-06 hope-float-left hope-margin-10" src="{% static 'WorkInProgress.png' %}">
+    <img class="donate-fv-ghana-pic-06 hope-float-left hope-margin-10" src="{% static 'Hope_JR2020_07.jpeg' %}">
     <div class="hope-margin-10"> {% trans "donate_fv_ghana_content_06_01" %} </div>
   </div>
 
@@ -177,7 +177,7 @@
 
   <div class="content">
     <div class="hope-width-100 hope-text-align-center">
-      <img class="donate-fv-ghana-pic-10" src="{% static 'WorkInProgress.png' %}">
+      <img class="donate-fv-ghana-pic-10" src="{% static 'Hope_JR2020_08.jpg' %}">
       <div class="hope-font-size-160"> {% trans "donate_fv_ghana_content_10_01" %} </div>
     </div>
   </div>
